--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* Configuración del diseño CSS para el Cuerpo del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS para el Cuerpo del Comercio Electrónico MAD Enterprise. */
 body {
   width: 100%;
   height: 100%;
@@ -40,7 +40,7 @@ button {
 .btnTransparente {
   background-color: transparent;
 }
-/* Configuración del diseño CSS para la Cabecera del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS para la Cabecera del Comercio Electrónico MAD Enterprise. */
 .logo {
   width: 170px;
   height: 150px;
@@ -78,7 +78,7 @@ button {
   top: -60px;
   left: 860px;
 }
-/* Configuración del diseño CSS para la Cabecera Autenticada del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS para la Cabecera Autenticada del Comercio Electrónico MAD Enterprise. */
 .btnesAuth {
   font-size: large;
   width: 140px;
@@ -114,7 +114,7 @@ button {
   top: -60px;
   left: 740px;
 }
-/* Configuración del diseño CSS del Cuerpo del Inicio del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS del Cuerpo del Inicio del Comercio Electrónico MAD Enterprise. */
 .gifms {
   width: 100%;
   height: 100%;
@@ -127,7 +127,7 @@ button {
   font-size: xx-large;
   padding: 15px;
 }
-/* Configuración del diseño CSS del Pie de Página del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS del Pie de Página del Comercio Electrónico MAD Enterprise. */
 .opciones {
   color: white;
   font-size: medium;
@@ -161,7 +161,7 @@ button {
   top: -20px;
   left: 100px;
 }
-/* Configuración CSS del Login del Comercio Electrónico MAD Shop. */
+/* Configuración CSS del Login del Comercio Electrónico MAD Enterprise. */
 .login {
   box-sizing: border-box;
   align-items: center;
@@ -276,7 +276,7 @@ label:nth-of-type(2) {
   position: relative;
   left: 150px;
 }
-/* Configuración CSS del Registro Cliente del Comercio Electrónico MAD Shop. */
+/* Configuración CSS del Registro Cliente del Comercio Electrónico MAD Enterprise. */
 .fondoRegistrarseCliente {
   background-image: url(./videosGIFs/gifClienteRegistrarse.gif);
 }
@@ -383,7 +383,7 @@ input[type=number]::-webkit-outer-spin-button {
   width: 50px;
   height: 50px;
 }
-/* Configuración CSS del Registro Empresa del Comercio Electrónico MAD Shop. */
+/* Configuración CSS del Registro Empresa del Comercio Electrónico MAD Enterprise. */
 .fondoRegistrarseEmpresa {
   background-image: url(./videosGIFs//gifEmpresaRegistrarse.gif);
 }
@@ -420,7 +420,7 @@ input[type=number]::-webkit-outer-spin-button {
   top: 6px;
   left: -350px;
 }
-/* Configuración del diseño CSS de la Sección Categorias del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS de la Sección Categorias del Comercio Electrónico MAD Enterprise. */
 .nothing {
   background: white;
   width: 1550px;
@@ -450,7 +450,7 @@ input[type=number]::-webkit-outer-spin-button {
   top: 170px;
   left: 1200px;
 }
-/* Configuración del diseño CSS de la Sección Contacto del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS de la Sección Contacto del Comercio Electrónico MAD Enterprise. */
 .fondoCont {
   background-image: url("./images/fondo_contacto.jpg");
   display:block;
@@ -478,7 +478,7 @@ input[type=number]::-webkit-outer-spin-button {
   left: 1000px;
   top: 20px;
 }
-/* Configuración del diseño CSS de la Sección Sobre Nosotros del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS de la Sección Sobre Nosotros del Comercio Electrónico MAD Enterprise. */
 .fondoAbout {
   background-image: url("./images/DuranteElCamino.png");
   display:block;
@@ -496,7 +496,7 @@ input[type=number]::-webkit-outer-spin-button {
   top: 55px;
   size: xx-large;
 }
-/* Configuración del diseño CSS de la Sección Trabaja con Nosotros del Comercio Electrónico MAD Shop. */
+/* Configuración del diseño CSS de la Sección Trabaja con Nosotros del Comercio Electrónico MAD Enterprise. */
 .fondoEmpleo {
   background-image: url("./images/fondo_empleo.jpg");
   display:block;
